kubernetes/apps/media/overseerr/app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
  namespace: media
spec:
  serviceName: overseerr
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: overseerr
          image: lscr.io/linuxserver/overseerr:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 5055
              name: http
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              memory: 256Mi
              cpu: "100m"
            limits:
              memory: 256Mi
              cpu: "1000m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-config
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.71.171
  ports:
    - port: 5055
      targetPort: 5055
      name: http
  selector:
    app: overseerr
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: overseerr
  namespace: media
spec:
  hosts:
    - "overseerr.bavsworld.com"
    - "requests.bavsworld.com" # Public facing alias
  gateways:
    - istio-system/default-gateway
  http:
    - route:
        - destination:
            host: overseerr
            port:
              number: 5055
